# tasklist

./: .env  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
src/: main.py
src/app/: User.py  __init__.py  database.py  routes.py
src/app/static/script/: modal.js  priority.js
src/app/static/styles/: custom.css  table.css
src/app/templates/: index.html  unauthorized.html
static/.svn/: wc.db
