[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Guilherme de Lyra <guilyra12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.0"
click = "^8.0.1"
greenlet = "^1.1.1"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.1"
MarkupSafe = "^2.0.1"
SQLAlchemy = "^1.4.23"
Werkzeug = "^2.0.1"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
